--- a/index.html
+++ b/index.html
@@ -107,36 +107,36 @@ a Hierarchical Classifier", Journal of Petroleum Science & Engineering, 107883, 
 </ul><hr>
 <h3><font color="red"><b>Conferences</b></font><br></h3><hr>
 <ul>
-<li><b>Achyut Mani Tripathi</b>, Rashmi Dutta Baruah,"Multivariate Time Series Classification With An Attention-Based
+<li><b><font color="red">Achyut Mani Tripathi</font></b>, Rashmi Dutta Baruah,"Multivariate Time Series Classification With An Attention-Based
 Multivariate Convolutional Neural Network", IEEE International Joint Conference on Neural Networks
 (IJCNN), July 19-24, 2020, Glasgow,UK</li><hr>
-<li><b>Achyut Mani Tripathi</b>,"Enhancing Multivariate Time Series Classification Using Long Short Term Memory
+<li><b><font color="red">Achyut Mani Tripathi</font></b>,"Enhancing Multivariate Time Series Classification Using Long Short Term Memory
 and Evidence Feed Forward HM</li><hr>
-<li><b>Achyut Mani Tripathi</b>, Rashmi Dutta Baruah,"Acoustic Event Detection Using Oriented Fuzzy Local Binary
+<li><b><font color="red">Achyut Mani Tripathi</font></b>, Rashmi Dutta Baruah,"Acoustic Event Detection Using Oriented Fuzzy Local Binary
 Pattern and Ensemble of Convolutional Neural Network", IEEE International Conference on Fuzzy
 Systems (FUZZ-IEEE), July 19-24, 2020, Glasgow,UK</li><hr>
-<li><b>Achyut Mani Tripathi</b>, Rashmi Dutta Baruah, "Contextual Anomaly Detection in Time Series Using Bynamic
+<li><b><font color="red">Achyut Mani Tripathi</font></b>, Rashmi Dutta Baruah, "Contextual Anomaly Detection in Time Series Using Bynamic
 Bayesian Network", Asian Conference on Intelligent Information and Database Systems,Phuket,
 Thailand, March 26-29, 2020</li><hr>
-<li><b>Achyut Mani Tripathi</b>, Rashmi utta Baruah,"Anomaly Detection in Multivariate Time Series Using Fuzzy
+<li><b><font color="red">Achyut Mani Tripathi</font></b>, Rashmi utta Baruah,"Anomaly Detection in Multivariate Time Series Using Fuzzy
 AdaBoost and Dynamic Naive Bayesian Classifier", in Proceedings of IEEE International Conference
 on Systems, Man, and Cybernetics (SMC), Bari, Oct 6-9, 2019, Italy.</li><hr>
-<li><b>Achyut Mani Tripathi</b>, Rashmi utta Baruah, "Incremental Cauchy Non-Negative Matrix Factorization and
+<li><b><font color="red">Achyut Mani Tripathi</font></b>, Rashmi utta Baruah, "Incremental Cauchy Non-Negative Matrix Factorization and
 Fuzzy Rule-based Classifier for Acoustic Source Separation", in Proceedings of IEEE International
 Conference on Fuzzy Systems (FUZZ-IEEE), June 23-27, 2019, New Orelans, USA</li><hr>
-<li><b>Achyut Mani Tripathi</b>, Rashmi utta Baruah, "Acoustic event classification using Cauchy Non-negative matrix
+<li><b><font color="red">Achyut Mani Tripathi</font></b>, Rashmi utta Baruah, "Acoustic event classification using Cauchy Non-negative matrix
 factorization and fuzzy rule-based classifier", in Proceedings of IEEE International Conference on
 Fuzzy Systems (FUZZ-IEEE), July 9-12, 2017, Naples, Italy, pp.1-6</li><hr>
-<li><b>Achyut Mani Tripathi</b>, Rashmi Dutta Baruah, "Anomaly Detection in Data Streams Based on Graph Coloring
+<li><b><font color="red">Achyut Mani Tripathi</font></b>, Rashmi Dutta Baruah, "Anomaly Detection in Data Streams Based on Graph Coloring
 Density Coefficients", in Proceedings of IEEE Symposium Series on Computational Intelligence
 (SSCI), Dec 6-9, 2016, Athens, Greece, pp.1-7</li><hr>
-<li><b>Achyut Mani Tripathi</b>, Diganta Baruah, Rashmi Dutta Baruah, "Acoustic Event Classification Using Ensemble of
+<li><b><font color="red">Achyut Mani Tripathi</font></b>, Diganta Baruah, Rashmi Dutta Baruah, "Acoustic Event Classification Using Ensemble of
 One-Class Classifiers for Monitoring Application", in Proceedings of IEEE Symposium Series on
 Computational Intelligence (SSCI), Dec 7-10, 2015, Cape Town, South Africa, pp.1681-1686</li><hr>
-<li><b>Achyut Mani Tripathi</b>, Diganta Baruah, Rashmi Dutta Baruah, "Acoustic Sensor Based Activity Recognition Using
+<li><b><font color="red">Achyut Mani Tripathi</font></b>, Diganta Baruah, Rashmi Dutta Baruah, "Acoustic Sensor Based Activity Recognition Using
 Ensemble of One-Class Classifiers", in Proceedings of IEEE Conference on Evolving and Adaptive
 Intelligent Systems (EAIS) , Dec 1-3, 2015, Duoai, France, pp.1-7</li><hr>
-<li>Sonia Sharma, <b>Achyut Mani Tripathi</b>, Rashmi Dutta Baruah, Shivshankar.B.Nair, "Ultrasonic Sensor-based Human Detector Using
+<li>Sonia Sharma, <b><font color="red">Achyut Mani Tripathi</font></b>, Rashmi Dutta Baruah, Shivshankar.B.Nair, "Ultrasonic Sensor-based Human Detector Using
 One-Class Classifiers", in Proceedings of IEEE Conference on Evolving and Adaptive Intelligent
 Systems (EAIS) , Dec 1-3 ,2015, Duoai, France, pp.1-6.</li><hr>
 </ul>
