--- a/index.html
+++ b/index.html
@@ -92,17 +92,17 @@ Drilling".(Application No. 201911040595)</li></ul><hr>
 <li><font size="4"><b>Achyut Mani Tripathi</b>,Konark Paul, "An Empirical Study of Adversarial Attacks on Environmental Sound
 Classification", IEEE/ACM Transactions on Audio, Speech, and Language Processing, <font color="red">Under
 Review</font></li><hr>
-<li><b>Achyut Mani Tripathi</b>, Konark Paul, "Data Augmentation Guided Knowledge Distillation for Environmental
+<li><b><font color="red">Achyut Mani Tripathi</font></b>, Konark Paul, "Data Augmentation Guided Knowledge Distillation for Environmental
 Sound Classification",Neurocomputing, Elsevier, <font color="red">Under Review</font></li><hr>
-<li><b>Achyut Mani Tripathi</b>, Konark Paul, "Vulnerability of Deep COVID-19 Models Against Adversarial Attacks",
+<li><b><font color="red">Achyut Mani Tripathi</font></b>, Konark Paul, "Vulnerability of Deep COVID-19 Models Against Adversarial Attacks",
 Expert Systems With Applications, <font color="red">Under Review</font></li><hr>
-<li><b>Achyut Mani Tripathi</b>, Aakansha Mishra, "(Adv-ESC): Adversarial Attack Datasets for An Environmental Sound
+<li><b><font color="red">Achyut Mani Tripathi</font></b>, Aakansha Mishra, "(Adv-ESC): Adversarial Attack Datasets for An Environmental Sound
 Classification", Applied Acoustic, Elsevier, <font color="red">Minor Revision Submitted</font></li><hr>
-<li><b>Achyut Mani Tripathi</b>, Aakansha Mishra, "Environment Sound Classification Using An Attention-Based Residual
+<li><b><font color="red">Achyut Mani Tripathi</font></b>, Aakansha Mishra, "Environment Sound Classification Using An Attention-Based Residual
 Neural Network", Neurocomputing, Elsevier, <font color="red">Minor Revision Submitted</font></li><hr>
-<li><b>Achyut Mani Tripathi</b>, Aakansha Mishra, "Self-Supervised Learning for Environmental Sound Classification",
+<li><b><font color="red">Achyut Mani Tripathi</font></b>, Aakansha Mishra, "Self-Supervised Learning for Environmental Sound Classification",
 Applied Acoustic, Elsevier, 108183, Vol.182, 2021</li><hr>			
-<li><b>Achyut Mani Tripathi</b>, Rashmi Dutta Baruah, Senthilmurugan S, "Oil Well Drilling Activities Recognition Using
+<li><b><font color="red">Achyut Mani Tripathi</font></b>, Rashmi Dutta Baruah, Senthilmurugan S, "Oil Well Drilling Activities Recognition Using
 a Hierarchical Classifier", Journal of Petroleum Science & Engineering, 107883, Vol.196, 2021.</li>
 </ul><hr>
 <h3><font color="red"><b>Conferences</b></font><br></h3><hr>
