--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 					<marquee marquee behavior="scroll" direction="up" scrollamount="2">
 						<ul>
 						<li><font color="red">14 May 2021: I Successfully Defended My Ph.D.
-						<li>13 May 2021: The Journal Paper On Title "Self Supervised learning for Environmental Sound Classification" is Accepted to Applied Acoustic, Elsevier</ul></font>
+						<li>13 May 2021: The Paper Titled "Self Supervised learning for Environmental Sound Classification" is Accepted to Applied Acoustic Journal, Elsevier</ul></font>
 					</marquee>
 				</div>
 			</div>
