--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ and Method for Activity Identification and Problem Prediction During Oil and Gas
 Drilling".(Application No. 201911040595)</li></ul><hr>
 	<h3><font color="red"><b>Journals</b></font><br></h3><hr>
 	<ul>
-<li><font size="4"><b><font color="blue">Achyut Mani Tripathi</font></b>,Aaknsha Mishra, Konark Paul, "An Empirical Study of Adversarial Attacks on Environmental Sound
+<li><font size="4"><b><font color="blue">Achyut Mani Tripathi</font></b>, Konark Paul, "An Empirical Study of Adversarial Attacks on Environmental Sound
 Classification", IEEE/ACM Transactions on Audio, Speech, and Language Processing, <font color="red">Under
 Review</font></li><hr>
 <li><b><font color="blue">Achyut Mani Tripathi</font></b>, Konark Paul, "Data Augmentation Guided Knowledge Distillation for Environmental
