--- a/index.html
+++ b/index.html
@@ -83,26 +83,26 @@
 	<div class="row">
 	<h2><b>Publications:<br></h2><hr>
 	<h3><font color="red"><b>Patents</b></font><br></h3><ul><hr>
-	<li>Senthilmurugan S, Rashmi Dutta Baruah, Munawar A. Shaik, <b><font color="blue">Achyut Mani Tripathi</font></b>, Senthil Selvaraju,
+	<li>[P1]: Senthilmurugan S, Rashmi Dutta Baruah, Munawar A. Shaik, <b><font color="blue">Achyut Mani Tripathi</font></b>, Senthil Selvaraju,
 Viswanth Ramba, Bala Kumara Vignesh M, Amol Musale, Gauba SK, Samal KB, "A System
 and Method for Activity Identification and Problem Prediction During Oil and Gas Well
 Drilling".(Application No. 201911040595)</li></ul><hr>
 	<h3><font color="red"><b>Journals</b></font><br></h3><hr>
 	<ul>
-<li><font size="4"><b><font color="blue">Achyut Mani Tripathi</font></b>, Konark Paul, "An Empirical Study of Adversarial Attacks on Environmental Sound
+<li>[J7]: <font size="4"><b><font color="blue">Achyut Mani Tripathi</font></b>, Konark Paul, "An Empirical Study of Adversarial Attacks on Environmental Sound
 Classification", IEEE/ACM Transactions on Audio, Speech, and Language Processing, <font color="red">Under
 Review</font></li><hr>
-<li><b><font color="blue">Achyut Mani Tripathi</font></b>, Konark Paul, "Data Augmentation Guided Knowledge Distillation for Environmental
+<li>[J6]: <b><font color="blue">Achyut Mani Tripathi</font></b>, Konark Paul, "Data Augmentation Guided Knowledge Distillation for Environmental
 Sound Classification",Neurocomputing, Elsevier, <font color="red">Under Review</font></li><hr>
-<li><b><font color="blue">Achyut Mani Tripathi</font></b>, Konark Paul, "Vulnerability of Deep COVID-19 Models Against Adversarial Attacks",
+<li>[J5]: <b><font color="blue">Achyut Mani Tripathi</font></b>, Konark Paul, "Vulnerability of Deep COVID-19 Models Against Adversarial Attacks",
 Expert Systems With Applications, <font color="red">Under Review</font></li><hr>
-<li><b><font color="blue">Achyut Mani Tripathi</font></b>, Aakansha Mishra, "(Adv-ESC): Adversarial Attack Datasets for An Environmental Sound
+<li>[J4]: <b><font color="blue">Achyut Mani Tripathi</font></b>, Aakansha Mishra, "(Adv-ESC): Adversarial Attack Datasets for An Environmental Sound
 Classification", Applied Acoustic, Elsevier, <font color="red">Minor Revision Submitted</font></li><hr>
-<li><b><font color="blue">Achyut Mani Tripathi</font></b>, Aakansha Mishra, "Environment Sound Classification Using An Attention-Based Residual
+<li>[J3]: <b><font color="blue">Achyut Mani Tripathi</font></b>, Aakansha Mishra, "Environment Sound Classification Using An Attention-Based Residual
 Neural Network", Neurocomputing, Elsevier, <font color="red">Minor Revision Submitted</font></li><hr>
-<li><b><font color="blue">Achyut Mani Tripathi</font></b>, Aakansha Mishra, "Self-Supervised Learning for Environmental Sound Classification",
+<li>[J2]: <b><font color="blue">Achyut Mani Tripathi</font></b>, Aakansha Mishra, "Self-Supervised Learning for Environmental Sound Classification",
 Applied Acoustic, Elsevier, 108183, Vol.182, 2021</li><hr>			
-<li><b><font color="blue">Achyut Mani Tripathi</font></b>, Rashmi Dutta Baruah, Senthilmurugan S, "Oil Well Drilling Activities Recognition Using
+<li>[J1]: <b><font color="blue">Achyut Mani Tripathi</font></b>, Rashmi Dutta Baruah, Senthilmurugan S, "Oil Well Drilling Activities Recognition Using
 a Hierarchical Classifier", Journal of Petroleum Science & Engineering, 107883, Vol.196, 2021.</li>
 </ul><hr>
 <h3><font color="red"><b>Conferences</b></font><br></h3><hr>
@@ -136,7 +136,7 @@ Computational Intelligence (SSCI), Dec 7-10, 2015, Cape Town, South Africa, pp.1
 <li>[C2]: <b><font color="blue">Achyut Mani Tripathi</font></b>, Diganta Baruah, Rashmi Dutta Baruah, "Acoustic Sensor Based Activity Recognition Using
 Ensemble of One-Class Classifiers", in Proceedings of IEEE Conference on Evolving and Adaptive
 Intelligent Systems (EAIS) , Dec 1-3, 2015, Duoai, France, pp.1-7</li><hr>
-<li>Sonia Sharma, <b><font color="blue">Achyut Mani Tripathi</font></b>, Rashmi Dutta Baruah, Shivshankar.B.Nair, "Ultrasonic Sensor-based Human Detector Using
+<li>[C1]: Sonia Sharma, <b><font color="blue">Achyut Mani Tripathi</font></b>, Rashmi Dutta Baruah, Shivshankar.B.Nair, "Ultrasonic Sensor-based Human Detector Using
 One-Class Classifiers", in Proceedings of IEEE Conference on Evolving and Adaptive Intelligent
 Systems (EAIS) , Dec 1-3 ,2015, Duoai, France, pp.1-6.</li><hr>
 </ul>
