--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
 
 					<marquee marquee behavior="scroll" direction="up" scrollamount="2">
 						<ul>
-				                 <li>12 June 2021: The Paper Titled "Environment Sound Classification Using An Attention-Based Residual Neural Network" is Accepted to Neurocomputing Journal, Elsevier
-						<li><font color="red">14 May 2021: I Successfully Defended My Ph.D.
+				                 <li><font color="red">12 June 2021: The Paper Titled "Environment Sound Classification Using An Attention-Based Residual Neural Network" is Accepted to Neurocomputing Journal, Elsevier
 						<li>13 May 2021: The Paper Titled "Self Supervised learning for Environmental Sound Classification" is Accepted to Applied Acoustic Journal, Elsevier</ul></font>
 					</marquee>
 				</div>
@@ -99,7 +98,7 @@ Sound Classification",Neurocomputing, Elsevier, <font color="red">Under Review</
 Expert Systems With Applications, <font color="red">Under Review</font></li><hr>
 <li>[J4]: <b><font color="blue">Achyut Mani Tripathi</font></b>, Aakansha Mishra, "(Adv-ESC): Adversarial Attack Datasets for An Environmental Sound
 Classification", Applied Acoustic, Elsevier, <font color="red">Minor Revision Submitted</font></li><hr>
-<li>[J3]: <b><font color="blue">Achyut Mani Tripathi</font></b>, Aakansha Mishra, "Environment Sound Classification Using An Attention-Based Residual Neural Network", Neurocomputing, Elsevier, 2021</li><hr>
+<li>[J3]: <b><font color="blue">Achyut Mani Tripathi</font></b>, Aakansha Mishra, "Environment Sound Classification Using An Attention-Based Residual Neural Network", Neurocomputing, Elsevier, 2021, <font color="red">(Accepted)</font></li><hr>
 <li>[J2]: <b><font color="blue">Achyut Mani Tripathi</font></b>, Aakansha Mishra, "Self-Supervised Learning for Environmental Sound Classification",
 Applied Acoustic, Elsevier, 108183, Vol.182, 2021</li><hr>			
 <li>[J1]: <b><font color="blue">Achyut Mani Tripathi</font></b>, Rashmi Dutta Baruah, Senthilmurugan S, "Oil Well Drilling Activities Recognition Using
