--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 					<marquee marquee behavior="scroll" direction="up" scrollamount="2">
 						<ul>
-				                 <li><font color="red">12 June 2021: The Paper Titled "Environment Sound Classification Using An Attention-Based Residual Neural Network" is Accepted to Neurocomputing Journal, Elsevier
+				                 <li><font color="green">12 June 2021: The Paper Titled "Environment Sound Classification Using An Attention-Based Residual Neural Network" is Accepted to Neurocomputing Journal, Elsevier
 						<li>13 May 2021: The Paper Titled "Self Supervised learning for Environmental Sound Classification" is Accepted to Applied Acoustic Journal, Elsevier</ul></font>
 					</marquee>
 				</div>
@@ -98,11 +98,11 @@ Sound Classification",Neurocomputing, Elsevier, <font color="red">Under Review</
 Expert Systems With Applications, <font color="red">Under Review</font></li><hr>
 <li> <b><font color="blue">Achyut Mani Tripathi</font></b>, Aakansha Mishra, "(Adv-ESC): Adversarial Attack Datasets for An Environmental Sound
 Classification", Applied Acoustic, Elsevier, <font color="red">Minor Revision Submitted</font></li><hr>
-<li> <b><font color="blue">Achyut Mani Tripathi</font></b>, Aakansha Mishra, "Environment Sound Classification Using An Attention-Based Residual Neural Network", Neurocomputing, Elsevier, 2021, <font color="red">(Accepted)</font></li><hr>
+<li> <b><font color="blue">Achyut Mani Tripathi</font></b>, Aakansha Mishra, "Environment Sound Classification Using An Attention-Based Residual Neural Network", Neurocomputing, Elsevier, 2021,[[IF=]4.438] <font color="red">(Accepted)</font></li><hr>
 <li> <b><font color="blue">Achyut Mani Tripathi</font></b>, Aakansha Mishra, "Self-Supervised Learning for Environmental Sound Classification",
-Applied Acoustic, Elsevier, 108183, Vol.182, 2021</li><hr>			
+Applied Acoustic, Elsevier, 108183, Vol.182, 2021 [IF=2.44]</li><hr>			
 <li><b><font color="blue">Achyut Mani Tripathi</font></b>, Rashmi Dutta Baruah, Senthilmurugan S, "Oil Well Drilling Activities Recognition Using
-a Hierarchical Classifier", Journal of Petroleum Science & Engineering, 107883, Vol.196, 2021.</li>
+a Hierarchical Classifier", Journal of Petroleum Science & Engineering, 107883, Vol.196, 2021.[IF=3.706]</li>
 </ul><hr>
 <h3><font color="red"><b>Conferences</b></font><br></h3><hr>
 <ul>
