--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
 
-<body style="background-color: #eaeded;">
+<body style="background-color:  #f2f4f4 ;">
 </head>
 
 <body>
