--- a/index.html
+++ b/index.html
@@ -89,55 +89,55 @@ and Method for Activity Identification and Problem Prediction During Oil and Gas
 Drilling".(Application No. 201911040595)</li></ul><hr>
 	<h3><font color="red"><b>Journals</b></font><br></h3><hr>
 	<ul>
-<li> <font size="4"><b><font color="blue">Achyut Mani Tripathi</font></b>, Konark Paul, "An Empirical Study of Adversarial Attacks on Environmental Sound
+<li> <font size="4"><font color="blue">Achyut Mani Tripathi</font>, Konark Paul, "An Empirical Study of Adversarial Attacks on Environmental Sound
 Classification", IEEE/ACM Transactions on Audio, Speech, and Language Processing, <font color="red">Under
 Review</font></li><hr>
-<li> <b><font color="blue">Achyut Mani Tripathi</font></b>, Konark Paul, "Data Augmentation Guided Knowledge Distillation for Environmental
+<li> <font color="blue">Achyut Mani Tripathi</font>, Konark Paul, "Data Augmentation Guided Knowledge Distillation for Environmental
 Sound Classification",Neurocomputing, Elsevier, <font color="red">Under Review</font></li><hr>
-<li> <b><font color="blue">Achyut Mani Tripathi</font></b>, Konark Paul, "Vulnerability of Deep COVID-19 Models Against Adversarial Attacks",
+<li> <font color="blue">Achyut Mani Tripathi</font>, Konark Paul, "Vulnerability of Deep COVID-19 Models Against Adversarial Attacks",
 Expert Systems With Applications, <font color="red">Under Review</font></li><hr>
-<li> <b><font color="blue">Achyut Mani Tripathi</font></b>, Aakansha Mishra, "(Adv-ESC): Adversarial Attack Datasets for An Environmental Sound
+<li> <font color="blue">Achyut Mani Tripathi</font>, Aakansha Mishra, "(Adv-ESC): Adversarial Attack Datasets for An Environmental Sound
 Classification", Applied Acoustic, Elsevier, <font color="red">Minor Revision Submitted</font></li><hr>
-<li> <b><font color="blue">Achyut Mani Tripathi</font></b>, Aakansha Mishra, "Environment Sound Classification Using An Attention-Based Residual Neural Network",
-	Neurocomputing, Elsevier, 2021, <font color="red">(Accepted)</font>, <font color="red">[IF=4.438]</font></font></li><hr>
-<li> <b><font color="blue">Achyut Mani Tripathi</font></b>, Aakansha Mishra, "Self-Supervised Learning for Environmental Sound Classification",
-Applied Acoustic, Elsevier, 108183, Vol.182, 2021 <font color="red">[IF=2.44]</font></li><hr>			
-<li><b><font color="blue">Achyut Mani Tripathi</font></b>, Rashmi Dutta Baruah, Senthilmurugan S, "Oil Well Drilling Activities Recognition Using
-a Hierarchical Classifier", Journal of Petroleum Science & Engineering, 107883, Vol.196, 2021.<font color="red">[IF=3.70]</font></li>
+<li> <font color="blue">Achyut Mani Tripathi</font>, Aakansha Mishra, "Environment Sound Classification Using An Attention-Based Residual Neural Network",
+	Neurocomputing, Elsevier, 2021, <font color="red">(Accepted)</font>, <font color="red">[Impact Factor=4.438]</font></font></li><hr>
+<li> <font color="blue">Achyut Mani Tripathi</font>, Aakansha Mishra, "Self-Supervised Learning for Environmental Sound Classification",
+Applied Acoustic, Elsevier, 108183, Vol.182, 2021. <font color="red">[Impact Factor=2.44]</font></li><hr>			
+<li><font color="blue">Achyut Mani Tripathi</font>, Rashmi Dutta Baruah, Senthilmurugan S, "Oil Well Drilling Activities Recognition Using
+a Hierarchical Classifier", Journal of Petroleum Science & Engineering, 107883, Vol.196, 2021. <font color="red">[Impact Factor=3.70]</font></li>
 </ul><hr>
 <h3><font color="red"><b>Conferences</b></font><br></h3><hr>
 <ul>
-<li> <b><font color="blue">Achyut Mani Tripathi</font></b>, Rashmi Dutta Baruah,"Multivariate Time Series Classification With An Attention-Based
+<li> <font color="blue">Achyut Mani Tripathi</font>, Rashmi Dutta Baruah,"Multivariate Time Series Classification With An Attention-Based
 Multivariate Convolutional Neural Network", IEEE International Joint Conference on Neural Networks
 (IJCNN), July 19-24, 2020, Glasgow,UK, <font color="red">[Core Rank=A]</font></li><hr>
-<li> <b><font color="blue">Achyut Mani Tripathi</font></b>,"Enhancing Multivariate Time Series Classification Using Long Short Term Memory
+<li> <font color="blue">Achyut Mani Tripathi</font>,"Enhancing Multivariate Time Series Classification Using Long Short Term Memory
 and Evidence Feed Forward HMM, IEEE International Joint Conference on Neural Networks
 (IJCNN), July 19-24, 2020, Glasgow,UK, <font color="red">[Core Rank=A]</font></li><hr>
-<li> <b><font color="blue">Achyut Mani Tripathi</font></b>, Rashmi Dutta Baruah,"Acoustic Event Detection Using Oriented Fuzzy Local Binary
+<li> <font color="blue">Achyut Mani Tripathi</font>, Rashmi Dutta Baruah,"Acoustic Event Detection Using Oriented Fuzzy Local Binary
 Pattern and Ensemble of Convolutional Neural Network", IEEE International Conference on Fuzzy
 Systems (FUZZ-IEEE), July 19-24, 2020, Glasgow,UK, <font color="red">[Core Rank=A]</font></li><hr>
-<li> <b><font color="blue">Achyut Mani Tripathi</font></b>, Rashmi Dutta Baruah, "Contextual Anomaly Detection in Time Series Using Bynamic
+<li> <font color="blue">Achyut Mani Tripathi</font>, Rashmi Dutta Baruah, "Contextual Anomaly Detection in Time Series Using Bynamic
 Bayesian Network", Asian Conference on Intelligent Information and Database Systems,Phuket,
 Thailand, March 26-29, 2020,<font color="red">[Core Rank=B]</font> </li><hr>
-<li> <b><font color="blue">Achyut Mani Tripathi</font></b>, Rashmi utta Baruah,"Anomaly Detection in Multivariate Time Series Using Fuzzy
+<li> <font color="blue">Achyut Mani Tripathi</font>, Rashmi utta Baruah,"Anomaly Detection in Multivariate Time Series Using Fuzzy
 AdaBoost and Dynamic Naive Bayesian Classifier", in Proceedings of IEEE International Conference
 on Systems, Man, and Cybernetics (SMC), Bari, Oct 6-9, 2019, Italy., <font color="red">[Core Rank=B]</font></li><hr>
-<li> <b><font color="blue">Achyut Mani Tripathi</font></b>, Rashmi utta Baruah, "Incremental Cauchy Non-Negative Matrix Factorization and
+<li> <font color="blue">Achyut Mani Tripathi</font>, Rashmi utta Baruah, "Incremental Cauchy Non-Negative Matrix Factorization and
 Fuzzy Rule-based Classifier for Acoustic Source Separation", in Proceedings of IEEE International
 Conference on Fuzzy Systems (FUZZ-IEEE), June 23-27, 2019, New Orelans, USA, <font color="red">[Core Rank=A]</font></li><hr>
-<li><b><font color="blue">Achyut Mani Tripathi</font></b>, Rashmi utta Baruah, "Acoustic event classification using Cauchy Non-negative matrix
+<li><font color="blue">Achyut Mani Tripathi</font>, Rashmi utta Baruah, "Acoustic event classification using Cauchy Non-negative matrix
 factorization and fuzzy rule-based classifier", in Proceedings of IEEE International Conference on
 Fuzzy Systems (FUZZ-IEEE), July 9-12, 2017, Naples, Italy, pp.1-6, <font color="red">[Core Rank=A]</font></li><hr>
-<li><b><font color="blue">Achyut Mani Tripathi</font></b>, Rashmi Dutta Baruah, "Anomaly Detection in Data Streams Based on Graph Coloring
+<li><font color="blue">Achyut Mani Tripathi</font>, Rashmi Dutta Baruah, "Anomaly Detection in Data Streams Based on Graph Coloring
 Density Coefficients", in Proceedings of IEEE Symposium Series on Computational Intelligence
 (SSCI), Dec 6-9, 2016, Athens, Greece, pp.1-7, <font color="red">[Core Rank=B]</font></li><hr>
-<li> <b><font color="blue">Achyut Mani Tripathi</font></b>, Diganta Baruah, Rashmi Dutta Baruah, "Acoustic Event Classification Using Ensemble of
+<li><font color="blue">Achyut Mani Tripathi</font>, Diganta Baruah, Rashmi Dutta Baruah, "Acoustic Event Classification Using Ensemble of
 One-Class Classifiers for Monitoring Application", in Proceedings of IEEE Symposium Series on
 Computational Intelligence (SSCI), Dec 7-10, 2015, Cape Town, South Africa, pp.1681-1686, <font color="red">[Core Rank=B]</font></li><hr>
-<li> <b><font color="blue">Achyut Mani Tripathi</font></b>, Diganta Baruah, Rashmi Dutta Baruah, "Acoustic Sensor Based Activity Recognition Using
+<li><font color="blue">Achyut Mani Tripathi</font>, Diganta Baruah, Rashmi Dutta Baruah, "Acoustic Sensor Based Activity Recognition Using
 Ensemble of One-Class Classifiers", in Proceedings of IEEE Conference on Evolving and Adaptive
 Intelligent Systems (EAIS) , Dec 1-3, 2015, Duoai, France, pp.1-7, <font color="red">[Core Rank=C]</font></li><hr>
-<li> Sonia Sharma, <b><font color="blue">Achyut Mani Tripathi</font></b>, Rashmi Dutta Baruah, Shivshankar.B.Nair, "Ultrasonic Sensor-based Human Detector Using
+<li> Sonia Sharma,<font color="blue">Achyut Mani Tripathi</font>, Rashmi Dutta Baruah, Shivshankar.B.Nair, "Ultrasonic Sensor-based Human Detector Using
 One-Class Classifiers", in Proceedings of IEEE Conference on Evolving and Adaptive Intelligent
 Systems (EAIS) , Dec 1-3 ,2015, Duoai, France, pp.1-6., <font color="red">[Core Rank=C]</font></li><hr>
 </ul>
