--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					<font size="4">Hi, I Am Achyut Mani Tripathi. I Obtained My Ph.D.(2021) from The Department of Computer Science & Engineering at Indian Institute of Technology Guwahati, Assam, India. I worked Under The Supervision of Dr.Rashmi Dutta Baruah.<br>My Research Intrest Includes:<font color="blue"> Deep Learning for Environmental Sound Classification, Adversarial Attacks on Deep Models, Knowledge Distillation for Deep Learning and Anomaly Detection in Time Series.</font></font><hr>
 					<h2><b>Recent News:</h2><br>
 
-					<marquee marquee behavior="scroll" direction="up" scrollamount="2">
+					<marquee marquee behavior="scroll" direction="left" scrollamount="2">
 						<ul>
 				                 <li><font color="green">12 June 2021: The Paper Titled "Environment Sound Classification Using An Attention-Based Residual Neural Network" is Accepted to Neurocomputing Journal, Elsevier
 						<li>13 May 2021: The Paper Titled "Self Supervised learning for Environmental Sound Classification" is Accepted to Applied Acoustic Journal, Elsevier</ul></font>
@@ -89,7 +89,7 @@ and Method for Activity Identification and Problem Prediction During Oil and Gas
 Drilling".(Application No. 201911040595)</li></ul><hr>
 	<h3><font color="red"><b>Journals</b></font><br></h3><hr>
 	<ul>
-<li><b> <font size="4"><font color="blue">Achyut Mani Tripathi</font>, Konark Paul, "An Empirical Study of Adversarial Attacks on Environmental Sound
+<li><b> <font color="blue">Achyut Mani Tripathi</font>, Konark Paul, "An Empirical Study of Adversarial Attacks on Environmental Sound
 Classification", IEEE/ACM Transactions on Audio, Speech, and Language Processing, <font color="red">Under
 Review</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi</font>, Konark Paul, "Data Augmentation Guided Knowledge Distillation for Environmental
