--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 					<marquee marquee behavior="scroll" direction="up" scrollamount="2.5">
 						<ul>
-				                 <li><font color="green">12 June 2021: The Paper Titled "Environment Sound Classification Using An Attention-Based Residual Neural Network" is Accepted to Neurocomputing Journal, Elsevier
+				                 <li><font color="DarkOrange">12 June 2021: The Paper Titled "Environment Sound Classification Using An Attention-Based Residual Neural Network" is Accepted to Neurocomputing Journal, Elsevier
 						<li>13 May 2021: The Paper Titled "Self Supervised learning for Environmental Sound Classification" is Accepted to Applied Acoustic Journal, Elsevier</ul></font>
 					</marquee>
 				</div>
@@ -118,7 +118,7 @@ and Evidence Feed Forward HMM, IEEE International Joint Conference on Neural Net
 <li> <font color="blue">Achyut Mani Tripathi</font>, Rashmi Dutta Baruah,"Acoustic Event Detection Using Oriented Fuzzy Local Binary
 Pattern and Ensemble of Convolutional Neural Network", IEEE International Conference on Fuzzy
 Systems (FUZZ-IEEE), July 19-24, 2020, Glasgow,UK, <font color="red">[Core Rank=A]</font></li><hr>
-<li> <font color="blue">Achyut Mani Tripathi</font>, Rashmi Dutta Baruah, "Contextual Anomaly Detection in Time Series Using Bynamic
+<li> <font color="blue">Achyut Mani Tripathi</font>, Rashmi Dutta Baruah, "Contextual Anomaly Detection in Time Series Using Dynamic
 Bayesian Network", Asian Conference on Intelligent Information and Database Systems,Phuket,
 Thailand, March 26-29, 2020,<font color="red">[Core Rank=B]</font> </li><hr>
 <li> <font color="blue">Achyut Mani Tripathi</font>, Rashmi utta Baruah,"Anomaly Detection in Multivariate Time Series Using Fuzzy
