--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
 
-<body style="background-color:  #ffebeb ;">
+<body style="background-color:  GhostWhite ;">
 </head>
 
 <body>
@@ -39,7 +39,7 @@
 			   	
 				<li><a href="#About Me"><b>About Me</b></a></li>
 				<li><a href="#Publications"><b>Publications</b></a></li>
-				<li><a href="#Achievemnets"><b>Achievemnets</b></a></li>
+				<li><a href="#Achievemnets"><b>Achievement</b></a></li>
 				<li><a href="#Projects"><b>Projects</b></a></li>
 				<li><a href="#Professional"><b>Professional Activities</b></a></li>
 				<li><a href="#Contact"><b>Contact Me</b></a></li>
@@ -151,7 +151,7 @@ Systems (EAIS) , Dec 1-3 ,2015, Duoai, France, pp.1-6., <font color="red">[Core 
 <section class="about" id="Achievemnets">
 <div class="container about">
 	<div class="row">
-	<h2><b>Achievemnets:<br></h2><hr>
+	<h2><b>Achievement:<br></h2><hr>
 	<ul>
 		<li>Recipient of IEEE Registration Grant For IEEE International Joint Conference on Neural Networks
 (IJCNN), July 19-24, 2020, New Glasgow, UK</li><hr>
