--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 						In My Ph.D. I worked Under The Supervision of Dr.Rashmi Dutta Baruah.<br>My Research Intrest Includes:<font color="blue"> Deep Learning for Environmental Sound Classification, Adversarial Attacks on Deep Models, Knowledge Distillation for Deep Learning and Anomaly Detection in Time Series.</font></font><hr>
 					<h2><b>Recent News:</h2><br>
 
-					<marquee marquee behavior="scroll" direction="up" scrollamount="2.5">
+					<!--<marquee marquee behavior="scroll" direction="up" scrollamount="2.5">-->
 						<ul>
-				                 <li><font color="red ">12 June 2021: The Paper Titled "Environment Sound Classification Using An Attention-Based Residual Neural Network" is Accepted to Neurocomputing Journal, Elsevier
-						<li>13 May 2021: The Paper Titled "Self Supervised learning for Environmental Sound Classification" is Accepted to Applied Acoustic Journal, Elsevier</ul></font>
-					</marquee>
+				                 <li><font color="red "><blink>12 June 2021: The Paper Titled "Environment Sound Classification Using An Attention-Based Residual Neural Network" is Accepted to Neurocomputing Journal, Elsevier</blink>
+						<li><blink>13 May 2021: The Paper Titled "Self Supervised learning for Environmental Sound Classification" is Accepted to Applied Acoustic Journal, Elsevier</ul></font></blink>
+					<!--</marquee>-->
 				</div>
 			</div>
 		</div>
