--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@ and Method for Activity Identification and Problem Prediction During Oil and Gas
 Drilling".(Application No. 201911040595)</li></ul><hr>
 	<h3><font color="red"><b>Journals</b></font><br></h3><hr>
 	<ul>
-<li><b> <font color="blue">Achyut Mani Tripathi</font>, Konark Paul, "An Empirical Study of Adversarial Attacks on Environmental Sound
+<li><b> <font color="blue">Achyut Mani Tripathi</font>, Aakansha Mishra, Konark Paul, "An Empirical Study of Adversarial Attacks on Environmental Sound
 Classification", IEEE/ACM Transactions on Audio, Speech, and Language Processing, <font color="red">Under
 Review</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi</font>, Konark Paul, "Data Augmentation Guided Knowledge Distillation for Environmental
 Sound Classification",Neurocomputing, Elsevier, <font color="red">Under Review</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi</font>, Konark Paul, "Vulnerability of Deep COVID-19 Models Against Adversarial Attacks",
 Expert Systems With Applications, <font color="red">Under Review</font></li><hr>
-<li> <font color="blue">Achyut Mani Tripathi</font>, Aakansha Mishra, "(Adv-ESC): Adversarial Attack Datasets for An Environmental Sound
+<li> <font color="blue">Achyut Mani Tripathi*</font>, Aakansha Mishra*, "(Adv-ESC): Adversarial Attack Datasets for An Environmental Sound
 Classification", Applied Acoustic, Elsevier, <font color="red">Minor Revision Submitted</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi</font>, Aakansha Mishra, "Environment Sound Classification Using An Attention-Based Residual Neural Network",
 	Neurocomputing, Elsevier, 2021, <font color="red">(Accepted)</font>, <font color="red">[Impact Factor=4.438]</font></font></li><hr>
