--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@ img {
 	<div class="row">
 					
 					
-					"कल और आएंगे नगमों की खिलती कलियां चुनने वाले, मुझसे बेहतर कहने वाले, तुमसे बेहतर सुनने वाले,<br>
-		                        कल कोई मुझको याद करे, क्यों कोई मुझको याद करे, मसरूफ ज़माना मेरे लिए, क्यों वक्त अपना बर्बाद करे।"<br> 
+					<center>"कल और आएंगे नगमों की खिलती कलियां चुनने वाले, मुझसे बेहतर कहने वाले, तुमसे बेहतर सुनने वाले,<br>
+		                        कल कोई मुझको याद करे, क्यों कोई मुझको याद करे, मसरूफ ज़माना मेरे लिए, क्यों वक्त अपना बर्बाद करे।"<br> </center>
 					<!--<img src="Achyut.jpg" alt="" width="140" height="140",align="left"><br><hr>-->
 					<h2><b>About Me:</h2><br>
 
