--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@ img {
 	<div class="row">
 					
 					
-					<center>"कल और आएंगे नगमों की खिलती कलियां चुनने वाले, मुझसे बेहतर कहने वाले, तुमसे बेहतर सुनने वाले,<br>
-		                        कल कोई मुझको याद करे, क्यों कोई मुझको याद करे, मसरूफ ज़माना मेरे लिए, क्यों वक्त अपना बर्बाद करे।"<br> </center>
+					<center>"उद्यमेन हि सिध्यन्ति कार्याणि न मनोरथैः। न हि सुप्तस्य सिंहस्य प्रविशन्ति मुखे मृगाः।।"<br> </center>
 					<!--<img src="Achyut.jpg" alt="" width="140" height="140",align="left"><br><hr>-->
 					<h2><b>About Me:</h2><br>
 
