--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ img {
 
 					<font size="4">Hi, I Am Achyut Mani Tripathi. I Obtained My Ph.D.(2021) from The Department of Computer Science & Engineering at Indian Institute of Technology Guwahati, Assam, India. 
 						In My Ph.D. I worked Under The Supervision of Dr.Rashmi Dutta Baruah.<br>My Research Intrest Includes:<font color="#333399"> Deep Learning for Environmental Sound Classification, Adversarial Attacks on Deep Models, Knowledge Distillation for Deep Learning and Anomaly Detection in Time Series.</font></font><hr>
-					<h2><b>Recent News:</h2><br>
+					<h2><b>Recent News:<img src="text.gif"> </h2><br>
 
 					<marquee marquee behavior="scroll" direction="up" scrollamount="2.5">
 						<ul>
