--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 	<link href="css/style.css" rel="stylesheet">
 
 <body style="background-color: white ;">
-	<style>
+	<!--<style>
 img {
   border-radius: 80%;
 }
-</style>
+</style>-->
 </head>
 
 <body>
