--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@ img {
 
 					<font size="4">Hi, I Am Achyut Mani Tripathi. I Obtained My Ph.D.(2021) from The Department of Computer Science & Engineering at Indian Institute of Technology Guwahati, Assam, India. 
 						In My Ph.D., I worked Under The Supervision of Dr.Rashmi Dutta Baruah.<br>My Research Interests Include:<font color="#333399"> Deep Learning for Environmental Sound Classification, Adversarial Attacks on Deep Models, Knowledge Distillation for Deep Learning and Anomaly Detection in Time Series.</font></font><hr>
-					<h2><b> <img src="text.gif",width="65" height="65"></h2><br>
+					<h2><b> New Highlights</h2><br>
 
 					<marquee marquee behavior="scroll" direction="up" scrollamount="2.5">
 						<ul>
-				                 <li><font color="red">12 June 2021: The Paper Titled "Environment Sound Classification Using An Attention-Based Residual Neural Network" is Accepted to Neurocomputing Journal, Elsevier
+				                 <li><font color="Tomato">12 June 2021: The Paper Titled "Environment Sound Classification Using An Attention-Based Residual Neural Network" is Accepted to Neurocomputing Journal, Elsevier
 						<li>13 May 2021: The Paper Titled "Self Supervised learning for Environmental Sound Classification" is Accepted to Applied Acoustic Journal, Elsevier</ul></font>
 					</marquee>
 				</div>
