--- a/index.html
+++ b/index.html
@@ -222,6 +222,8 @@ IEEE), July 19-24, 2020, New Glasgow, UK</li><hr>
 	<ul>
 		<li>Email: t.achyut@iitg.ac.in</li>
 		<li><a href="https://github.com/achyutmani">Github Profile</a></li>
+		<li><a href="https://www.linkedin.com/in/achyut-mani-tripathi-24823b183/">Linkedin Profile</a></li>
+		<li><a href="https://dblp.org/pid/173/8904.html">DBLP Profile</a></li>
 		
 
 	</ul>
