--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ Drilling".</li></ul><hr>
 	<h3><font color="red"><b>Journals</b></font><br></h3><hr>
 	<ul>
 <li><b> <font color="blue">Achyut Mani Tripathi</font> "An Empirical Study of Adversarial Attacks on Industrial Sound
-Classification", IEEE Transactions on Dependable and Secure Computing, <font color="red">Under Review</font></li><hr>		
+Classification", IEEE/ACM Transactions on Audio, Speech, and Language Processing, <font color="red">Under Review</font></li><hr>		
 <li><b> <font color="blue">Achyut Mani Tripathi</font>, Aakansha Mishra, Konark Paul, "An Empirical Study of Adversarial Attacks on Environmental Sound
 Classification", IEEE/ACM Transactions on Audio, Speech, and Language Processing, <font color="red">Under
 Review</font></li><hr>
