--- a/index.html
+++ b/index.html
@@ -96,8 +96,10 @@ Viswanth Ramba, Bala Kumara Vignesh M, Amol Musale, Gauba SK, Samal KB, "A Syste
 and Method for Activity Identification and Problem Prediction During Oil and Gas Well
 Drilling".</li></ul><hr>
 	<h3><font color="red"><b>Journals</b></font><br></h3><hr>
-	<ul>
-<li><b> <font color="blue">Achyut Mani Tripathi</font> "When Adversarial Attack Meets Contrastive Learning", IEEE Transactions on Dependable and Secure Computing (TDSC), <font color="red">Under Review</font></li><hr>		
+	<ul>		
+<li><b> <font color="blue">Achyut Mani Tripathi</font>, "Enhancing Transferability of Adversarial Attacks for Environmental Sound
+Classification", IEEE/ACM Transactions on Audio, Speech, and Language Processing (TASLP), <font color="red">Under
+Review</font></li><hr>
 <li><b> <font color="blue">Achyut Mani Tripathi</font>, Aakansha Mishra, Konark Paul, "An Empirical Study of Adversarial Attacks on Environmental Sound
 Classification", IEEE/ACM Transactions on Audio, Speech, and Language Processing (TASLP), <font color="red">Under
 Review</font></li><hr>
