--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ Drilling".</li></ul><hr>
 Classification", IEEE/ACM Transactions on Audio, Speech, and Language Processing (TASLP), <font color="red">Under
 Review</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi</font>, Konark Paul, "Data Augmentation Guided Knowledge Distillation for Environmental
-Sound Classification",Neurocomputing, Elsevier, <font color="red">Under Review</font></li><hr>
+Sound Classification",Neurocomputing, Elsevier, <font color="red">Major Revision Submitted</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi</font>, Konark Paul, "Vulnerability of Deep COVID-19 Models Against Adversarial Attacks",
 Expert Systems With Applications, <font color="red">Under Review</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi*</font>, Aakansha Mishra*, "(Adv-ESC): Adversarial Attack Datasets for An Environmental Sound
