--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ img {
 					<h2><b>About Me:</h2><br>
 
 					<font size="4">Hi, I Am Achyut Mani Tripathi. I Obtained My Ph.D.(2021) from The Department of Computer Science & Engineering at Indian Institute of Technology Guwahati (IIT-Guwahati), Assam, India. 
-						In My Ph.D., I worked Under The Supervision of Dr.Rashmi Dutta Baruah.<br>My Research Interests Include:<font color="#333399"> Deep Learning for Environmental Sound Classification, Adversarial Attacks on Deep Models, Knowledge Distillation for Deep Learning and Anomaly Detection in Time Series.</font></font><hr>
+						<br>My Research Interests Include:<font color="#333399"> Deep Learning for Environmental Sound Classification, Adversarial Attacks on Deep Models, Knowledge Distillation for Deep Learning and Anomaly Detection in Time Series.</font></font><hr>
 					<h2><b> New Highlights:</h2><br>
 
 					<marquee marquee behavior="scroll" direction="up" scrollamount="2">
