--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ Classification", IEEE/ACM Transactions on Audio, Speech, and Language Processing
 Review</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi</font>, Konark Paul, "Data Augmentation Guided Knowledge Distillation for Environmental
 Sound Classification",Neurocomputing, Elsevier, <font color="red">Major Revision Submitted</font></li><hr>
-<li> <font color="blue">Achyut Mani Tripathi</font>, Konark Paul, "Vulnerability of Deep COVID-19 Models Against Adversarial Attacks",
+<li> <font color="blue">Achyut Mani Tripathi</font>, Konark Paul, "A Study on Vulnerability of Deep COVID-19 Models Against Adversarial Attacks",
 Expert Systems With Applications, <font color="red">Under Review</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi*</font>, Aakansha Mishra*, "(Adv-ESC): Adversarial Attack Datasets for An Environmental Sound
 Classification", Applied Acoustic, Elsevier, <font color="red">Minor Revision Submitted</font></li><hr>
@@ -205,7 +205,8 @@ IEEE), July 19-24, 2020, New Glasgow, UK</li><hr>
 	<h2><b> Reviewer :<br></h2><hr>
 	<ul>
 		<li>  IEEE/ACM Transactions on Audio, Speech, and Language Processing (IEEE TASLP)
-		<li> Artificial Intelligence Review, a Springer Journal.
+		<li> Artificial Intelligence Review, a Springer Journal
+			<li> SN Computer Science, a Springer Journal 
 			
 		
 
