--- a/index.html
+++ b/index.html
@@ -97,16 +97,16 @@ and Method for Activity Identification and Problem Prediction During Oil and Gas
 Drilling".</li></ul><hr>
 	<h3><font color="red"><b>Journals</b></font><br></h3><hr>
 	<ul>		
-<li><b> <font color="blue">Achyut Mani Tripathi</font>, "Contrastive Learning-Based Adversarial Attack and Resulting Adversarial Datasets for An Environmental Sound Classification", IEEE/ACM Transactions on Audio, Speech, and Language Processing (TASLP), <font color="red">Under Prepration</font></li><hr>
+<li><b> <font color="blue">Achyut Mani Tripathi</font>, "When Sub-Band Feature Meets Attention Mechanism While Knowledge Distillation for An Environmental Sound Classification", Neurocomputing, <font color="red">Under Prepration</font>, <font color="red">[Impact Factor=5.719]</font></li><hr>
 <li><b> <font color="blue">Achyut Mani Tripathi</font>, Aakansha Mishra, Konark Paul, "An Empirical Study of Adversarial Attacks on Environmental Sound
 Classification", IEEE/ACM Transactions on Audio, Speech, and Language Processing (TASLP), <font color="red">Under
-Review</font></li><hr>
+Review</font>, <font color="red">[Impact Factor=3.919]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi</font>, Konark Paul, "Data Augmentation Guided Knowledge Distillation for Environmental
-Sound Classification",Neurocomputing, Elsevier, <font color="red">Major Revision Submitted</font></li><hr>
+Sound Classification",Neurocomputing, Elsevier, <font color="red">Major Revision Submitted</font>, <font color="red">[Impact Factor=5.719]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi</font>, Konark Paul, "A Study on Vulnerability of Deep COVID-19 Models Against Adversarial Attacks",
-Expert Systems With Applications, <font color="red">Under Review</font></li><hr>
+Expert Systems With Applications, <font color="red">Under Review</font>, <font color="red">[Impact Factor=6.954]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi*</font>, Aakansha Mishra*, "(Adv-ESC): Adversarial Attack Datasets for An Environmental Sound
-Classification", Applied Acoustic, Elsevier, <font color="red">Minor Revision Submitted</font></li><hr>
+Classification", Applied Acoustic, Elsevier, <font color="red">Minor Revision Submitted</font>, <font color="red">[Impact Factor=2.639]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi</font>, Aakansha Mishra, "Environment Sound Classification Using An Attention-Based Residual Neural Network",
 	Neurocomputing, Elsevier, 2021, <font color="red">(Accepted)</font>, <font color="red">[Impact Factor=5.719]</font></font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi</font>, Aakansha Mishra, "Self-Supervised Learning for Environmental Sound Classification",
