--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@ IEEE), July 19-24, 2020, New Glasgow, UK</li><hr>
 		<li>  IEEE/ACM Transactions on Audio, Speech, and Language Processing (IEEE TASLP)
 		<li> Artificial Intelligence Review, a Springer Journal
 			<li> SN Computer Science, a Springer Journal 
+				<li> Applied Intelligence, a Springer Journal 
 			
 		
 
