--- a/index.html
+++ b/index.html
@@ -98,21 +98,21 @@ Drilling".</li></ul><hr>
 	<h3><font color="red"><b>Journals</b></font><br></h3><hr>
 	<ul>	
 <li><b> <font color="blue">Achyut Mani Tripathi</font>, "Universal Defense Friendly Dataset (UDFD) for Defense Against Adversarial Attacks on An Environmental Sound Classification",Neurocomputing, <font color="red">Under
-Review</font>, <font color="red">[Impact Factor=5.719]</font></li><hr>		
-<li><b> <font color="blue">Achyut Mani Tripathi*</font>, Aakansha Mishra*, "When Sub-Band Feature Meets Attention Mechanism While Knowledge Distillation for An Environmental Sound Classification: An Empirical Study", Neurocomputing, <font color="red">Under Prepration</font>, <font color="red">[Impact Factor=5.719]</font></li><hr>
+Review</font>, <font color="red">[H-index=119, Impact Factor=5.719]</font></li><hr>		
+<li><b> <font color="blue">Achyut Mani Tripathi*</font>, Aakansha Mishra*, "When Sub-Band Feature Meets Attention Mechanism While Knowledge Distillation for An Environmental Sound Classification: An Empirical Study", Neurocomputing, <font color="red">Under Prepration</font>, <font color="red">[H-index=119, Impact Factor=5.719]</font></li><hr>
 <li><b> <font color="blue">Achyut Mani Tripathi</font>, Aakansha Mishra, Konark Paul, "An Empirical Study of Adversarial Attacks on Environmental Sound
 Classification", IEEE/ACM Transactions on Audio, Speech, and Language Processing (TASLP), <font color="red">Under
-Review</font>, <font color="red">[Impact Factor=3.919]</font></li><hr>
+Review</font>, <font color="red">[H-index=60, Impact Factor=3.919]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi</font>, Konark Paul, "Data Augmentation Guided Knowledge Distillation for Environmental
-Sound Classification",Neurocomputing, Elsevier, <font color="red">Major Revision Submitted</font>, <font color="red">[Impact Factor=5.719]</font></li><hr>
+Sound Classification",Neurocomputing, Elsevier, <font color="red">Major Revision Submitted</font>, <font color="red">[H-index=119, Impact Factor=5.719]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi*</font>, Aakansha Mishra*, "(Adv-ESC): Adversarial Attack Datasets for An Environmental Sound
-Classification", Applied Acoustic, Elsevier, <font color="red">Minor Revision Submitted</font>, <font color="red">[Impact Factor=2.639]</font></li><hr>
+Classification", Applied Acoustic, Elsevier, <font color="red">Minor Revision Submitted</font>, <font color="red">[H-index=49, Impact Factor=2.639]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi</font>, Aakansha Mishra, "Environment Sound Classification Using An Attention-Based Residual Neural Network",
-	Neurocomputing, Elsevier, 2021, <font color="red">(Accepted)</font>, <font color="red">[Impact Factor=5.719]</font></font></li><hr>
+	Neurocomputing, Elsevier, 2021, <font color="red">(Accepted)</font>, <font color="red">[H-index=119, Impact Factor=5.719]</font></font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi</font>, Aakansha Mishra, "Self-Supervised Learning for Environmental Sound Classification",
-Applied Acoustic, Elsevier, 108183, Vol.182, 2021. <font color="red">[Impact Factor=2.639]</font></li><hr>			
+Applied Acoustic, Elsevier, 108183, Vol.182, 2021. <font color="red">[H-index=49, Impact Factor=2.639]</font></li><hr>			
 <li><font color="blue">Achyut Mani Tripathi</font>, Rashmi Dutta Baruah, Senthilmurugan S, "Oil Well Drilling Activities Recognition Using
-a Hierarchical Classifier", Journal of Petroleum Science & Engineering, 107883, Vol.196, 2021. <font color="red">[Impact Factor=4.346]</font></li>
+a Hierarchical Classifier", Journal of Petroleum Science & Engineering, 107883, Vol.196, 2021. <font color="red">[H-index=66, Impact Factor=4.346]</font></li>
 </ul><hr>
 <h3><font color="red"><b>Conferences</b></font><br></h3><hr>
 <ul>
