--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ Sound Classification",Neurocomputing, Elsevier, <font color="red">Major Revision
 <li> <font color="blue">Achyut Mani Tripathi*</font>, Aakansha Mishra*, "(Adv-ESC): Adversarial Attack Datasets for An Environmental Sound
 Classification", Applied Acoustic, Elsevier, <font color="red">Minor Revision Submitted</font>, <font color="red">[H-index=49, Impact Factor=2.639]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi</font>, Aakansha Mishra, "Environment Sound Classification Using An Attention-Based Residual Neural Network",
-	Neurocomputing, Elsevier, 2021, <font color="red">(Accepted)</font>, <font color="red">[H-index=119, Impact Factor=5.719]</font></font></li><hr>
+	Neurocomputing, Elsevier, Vol.460, Page 409-423, <font color="red">[H-index=119, Impact Factor=5.719]</font></font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi</font>, Aakansha Mishra, "Self-Supervised Learning for Environmental Sound Classification",
 Applied Acoustic, Elsevier, 108183, Vol.182, 2021. <font color="red">[H-index=49, Impact Factor=2.639]</font></li><hr>			
 <li><font color="blue">Achyut Mani Tripathi</font>, Rashmi Dutta Baruah, Senthilmurugan S, "Oil Well Drilling Activities Recognition Using
