--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ Drilling".</li></ul><hr>
 	<ul>	
 <li><b> <font color="blue">Achyut Mani Tripathi</font>, "Hierarchical Representation Learning-Based Knowledge Distillation for Sound Classification", Neurocomputing, <font color="red">Under
 Review</font>, <font color="red">[H-index=119, Impact Factor=5.719]</font></li><hr>		
-<li><b> <font color="blue">Achyut Mani Tripathi*</font>, Aakansha Mishra*, "When Sub-Band Feature Meets Attention Mechanism While Knowledge Distillation for Sound Classification: An Empirical Study", Neurocomputing, <font color="red">Under Prepration</font>, <font color="red">[H-index=119, Impact Factor=5.719]</font></li><hr>
+<li><b> <font color="blue">Achyut Mani Tripathi</font>, "When Sub-Band Feature Meets Attention Mechanism While Knowledge Distillation for Sound Classification: An Empirical Study", Neurocomputing, <font color="red">Under Prepration</font>, <font color="red">[H-index=119, Impact Factor=5.719]</font></li><hr>
 <li><b> <font color="blue">Achyut Mani Tripathi</font>, Aakansha Mishra, Konark Paul, "An Empirical Study of Adversarial Attacks on Environmental Sound
 Classification", IEEE/ACM Transactions on Audio, Speech, and Language Processing (TASLP), <font color="red">Under
 Review</font>, <font color="red">[H-index=60, Impact Factor=3.919]</font></li><hr>
